=======
CHANGES
=======

1.2.2 (unrelease)
-----------------

- No changes yet.

1.2.1 (2012-06-05)
------------------

- Added support for zope.schema.Set fields.

- Fixed a bug where __init__ was used to empty a container.


1.2.0 (2012-04-06)
------------------

- Initial release on pypi.

1.1.1 (2012-02-27)
------------------

- Make sure that setting the parent explicitly on items created in the
  collection config store is optionally and overwritable.


1.1.0 (2012-01-29)
------------------

- Feature Added dump/load support for ``datetime.timedelta`` objects.

1.0.0
-----

- Initial release.